--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ Django==4.0.3
 Pillow==9.0.1
 psycopg2-binary==2.9.3
 python-dotenv==0.19.2
+python-slugify==6.1.2
 sqlparse==0.4.2
+text-unidecode==1.3
